[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Health.gd" type="Script" id=1]
[ext_resource path="res://concept_art/player.png" type="Texture" id=2]
[ext_resource path="res://scripts/UpdateGOTransform.gd" type="Script" id=3]
[ext_resource path="res://scripts/CharacterController.gd" type="Script" id=4]
[ext_resource path="res://scripts/PlayerInput.gd" type="Script" id=5]
[ext_resource path="res://scripts/Player.gd" type="Script" id=6]
[ext_resource path="res://scripts/PlayerInventory.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.7084, 24.3165 )

[node name="Player" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 8
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
visible = false
position = Vector2( 0, 22 )
shape = SubResource( 1 )

[node name="PickUpArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
shape = SubResource( 2 )

[node name="DigBox" type="Area2D" parent="."]
position = Vector2( 0, 22 )
monitorable = false
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DigBox"]
shape = SubResource( 1 )

[node name="PrimaryPosition" type="Position2D" parent="."]
position = Vector2( 20.5, -6.5 )

[node name="SecondaryPosition" type="Position2D" parent="."]
position = Vector2( 0, -4.266 )
rotation = 2.35619

[node name="HeadPosition" type="Position2D" parent="."]
position = Vector2( 0, -24 )

[node name="FootPosition" type="Position2D" parent="."]
position = Vector2( 0, 24 )

[node name="Health" type="Node" parent="."]
script = ExtResource( 1 )

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource( 5 )

[node name="CharacterController" type="Node" parent="."]
script = ExtResource( 4 )

[node name="UpdateGOTransform" type="Node" parent="."]
script = ExtResource( 3 )
node_from_path = NodePath("../KinematicBody2D")

[node name="PlayerInventory" type="Node" parent="."]
script = ExtResource( 9 )
